Simplify container config, build and use env variables at runtime